implementato l' ui personalizzato, manca testing

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,7 +40,7 @@ QProgressBar::chunk {
      <number>24</number>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="btnStart">
     <property name="geometry">
      <rect>
       <x>300</x>
